--- a/index.html
+++ b/index.html
@@ -1,107 +1,252 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Registro de Servicios</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Captura de Servicios</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-image: url('marca-de-agua.png');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      margin: 0;
-      padding: 0;
+    :root {
+      --azul-fondo: #2E4A66;
+      --azul-boton: #1C3D5A;
+      --blanco: #ffffff;
     }
+
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: var(--azul-fondo);
+      color: var(--blanco);
+      overflow-x: hidden;
+    }
+
     .container {
-      background-color: rgba(255, 255, 255, 0.9);
-      margin: 50px auto;
+      max-width: 500px;
+      margin: auto;
       padding: 20px;
-      max-width: 600px;
+      box-sizing: border-box;
+    }
+
+    .logo {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .logo img {
+      height: 70px;
+    }
+
+    .caratula, .formulario, .despedida {
+      background-color: var(--azul-fondo);
+      padding: 20px;
       border-radius: 10px;
     }
+
+    .caratula input {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 5px;
+      border: none;
+      font-size: 16px;
+    }
+
+    .caratula button {
+      margin-top: 15px;
+      width: 100%;
+      padding: 10px;
+      background-color: var(--azul-boton);
+      color: var(--blanco);
+      border: none;
+      border-radius: 5px;
+      font-weight: bold;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
     h1 {
       text-align: center;
+      font-size: 20px;
+      margin-bottom: 20px;
     }
+
     label {
       display: block;
-      margin-top: 10px;
+      margin-top: 15px;
+      font-weight: bold;
+      font-size: 14px;
     }
-    input, select {
+
+    input, select, textarea {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
       border-radius: 5px;
-      border: 1px solid #ccc;
+      border: none;
+      font-size: 14px;
     }
-    button {
-      margin-top: 20px;
+
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 30px;
+    }
+
+    .buttons button {
       padding: 10px;
-      width: 100%;
-      background-color: #0078D7;
-      color: white;
+      background-color: var(--azul-boton);
+      color: var(--blanco);
       border: none;
       border-radius: 5px;
+      font-weight: bold;
       font-size: 16px;
+      cursor: pointer;
     }
-    button:hover {
-      background-color: #005fa3;
+
+    footer {
+      text-align: center;
+      font-size: 11px;
+      color: rgba(255, 255, 255, 0.6);
+      margin-top: 40px;
     }
-    .logo {
-      display: block;
-      margin: 0 auto 20px;
-      max-width: 150px;
+
+    .hidden {
+      display: none;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <img src="logo-sitio-herradura.png" alt="Logo Sitio Herradura" class="logo">
-    <h1>Registro de Servicios</h1>
-    <form id="formulario">
-      <label for="responsable">Responsable:</label>
-      <input type="text" id="responsable" name="responsable" required>
 
-      <label for="fecha">Fecha:</label>
-      <input type="date" id="fecha" name="fecha" required>
+    <!-- Logo institucional -->
+    <div class="logo">
+      <img src="logo-sitio-herradura.png" alt="Logo Sitio Herradura">
+    </div>
 
-      <label for="asistencia">¿Asistencia registrada?</label>
-      <select id="asistencia" name="asistencia" required>
-        <option value="">Selecciona</option>
-        <option value="sí">Sí</option>
-        <option value="no">No</option>
+    <!-- Carátula -->
+    <div id="caratula" class="caratula">
+      <h1>Inicio de jornada</h1>
+      <input type="text" id="nombreUsuario" placeholder="Ingresa tu nombre">
+      <button onclick="iniciarJornada()">Continuar</button>
+    </div>
+
+    <!-- Formulario principal -->
+    <div id="formulario" class="formulario hidden">
+      <h1>Captura de Servicios</h1>
+
+      <label>Folio</label>
+      <input type="text" id="folio" disabled>
+
+      <label>Fecha</label>
+      <input type="date" id="fecha">
+
+      <label>Hora</label>
+      <input type="time" id="hora">
+
+      <label>Telefonista</label>
+      <input type="text" id="telefonista">
+
+      <label>Dirección</label>
+      <input type="text" id="direccion">
+
+      <label>Destino</label>
+      <input type="text" id="destino">
+
+      <label>Asignado a</label>
+      <input type="text" id="asignado">
+
+      <label>Tipo de servicio</label>
+      <select id="tipoServicio">
+        <option value="">Selecciona una opción</option>
+        <option>NORMAL</option>
+        <option>CARRO AMPLIO</option>
+        <option>CARRO SIN ROTULAR</option>
+        <option>CARRO ROTULAR</option>
+        <option>CAMBIO DE LLANTA</option>
+        <option>PASAR CORRIENTE</option>
+        <option>GUÍA</option>
+        <option>MENSAJERÍA</option>
+        <option>MENSAJERÍA COMPRAS</option>
+        <option>TRANSPORTE DE MASCOTA</option>
       </select>
 
-      <label for="tipo">Tipo de servicio:</label>
-      <select id="tipo" name="tipo" required>
-        <option value="">Selecciona</option>
-        <option value="Mantenimiento">Mantenimiento</option>
-        <option value="Supervisión">Supervisión</option>
-        <option value="Atención ciudadana">Atención ciudadana</option>
-        <option value="Otro">Otro</option>
-      </select>
+      <label>Observaciones</label>
+      <textarea id="observaciones" rows="3"></textarea>
 
-      <label for="observaciones">Observaciones:</label>
-      <input type="text" id="observaciones" name="observaciones">
+      <div class="buttons">
+        <button onclick="guardarDatos()">GUARDAR</button>
+        <button onclick="copiarComoImagen()">COPIAR COMO IMAGEN</button>
+        <button onclick="cerrarTurno()">CERRAR TURNO</button>
+      </div>
+    </div>
 
-      <button type="submit">Registrar</button>
-    </form>
+    <!-- Despedida -->
+    <div id="despedida" class="despedida hidden">
+      <h1>Turno finalizado</h1>
+      <p>Gracias por tu servicio.</p>
+    </div>
+
+    <!-- Marca de agua -->
+    <footer>
+      Propiedad y diseño de JESÚS SÁNCHEZ C. con la asesoría de Microsoft Copilot
+    </footer>
   </div>
 
   <script>
-    document.getElementById('formulario').addEventListener('submit', function(e) {
-      e.preventDefault();
+    let folioContador = 1;
+
+    function generarFolio() {
+      const fecha = new Date();
+      const año = fecha.getFullYear();
+      const mes = fecha.getMonth();
+      if (mes === 0 && fecha.getDate() === 1 && fecha.getHours() === 0 && fecha.getMinutes() === 0) {
+        folioContador = 1;
+      }
+      return `${folioContador}/${año.toString().slice(-2)}`;
+    }
+
+    function iniciarJornada() {
+      const nombre = document.getElementById('nombreUsuario').value.trim();
+      if (nombre === "") {
+        alert("Por favor ingresa tu nombre.");
+        return;
+      }
+
+      document.getElementById('caratula').classList.add('hidden');
+      document.getElementById('formulario').classList.remove('hidden');
+
+      document.getElementById('folio').value = generarFolio();
+      document.getElementById('fecha').valueAsDate = new Date();
+      document.getElementById('hora').value = new Date().toTimeString().slice(0,5);
+    }
+
+    function guardarDatos() {
       const datos = {
-        responsable: this.responsable.value,
-        fecha: this.fecha.value,
-        asistencia: this.asistencia.value,
-        tipo: this.tipo.value,
-        observaciones: this.observaciones.value
+        folio: document.getElementById('folio').value,
+        fecha: document.getElementById('fecha').value,
+        hora: document.getElementById('hora').value,
+        telefonista: document.getElementById('telefonista').value,
+        direccion: document.getElementById('direccion').value,
+        destino: document.getElementById('destino').value,
+        asignado: document.getElementById('asignado').value,
+        tipoServicio: document.getElementById('tipoServicio').value,
+        observaciones: document.getElementById('observaciones').value
       };
-      console.log("Datos registrados:", datos);
-      alert("Servicio registrado correctamente.");
-      this.reset();
-    });
+
+      // Simulación de envío a hoja de cálculo
+      console.log("Datos enviados a la base de datos:", datos);
+      alert("Datos guardados correctamente.");
+      folioContador++;
+    }
+
+    function copiarComoImagen() {
+      alert("Función de copiar como imagen aún no implementada.");
+    }
+
+    function cerrarTurno() {
+      document.getElementById('formulario').classList.add('hidden');
+      document.getElementById('despedida').classList.remove('hidden');
+    }
   </script>
 </body>
 </html>
