--- a/index.html
+++ b/index.html
@@ -1,220 +1,105 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Captura de Servicios</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registro de Servicios</title>
   <style>
-    :root {
-      --azul-fondo: #2E4A66;
-      --azul-boton: #1C3D5A;
-      --blanco: #ffffff;
-    }
-
     body {
-      margin: 0;
       font-family: Arial, sans-serif;
-      background-color: var(--azul-fondo);
-      color: var(--blanco);
-      overflow-x: hidden;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
     }
 
-    .container {
-      max-width: 500px;
-      margin: auto;
-      padding: 20px;
-      box-sizing: border-box;
-    }
-
-    .logo {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .logo img {
-      height: 70px;
-    }
-
-    .caratula, .formulario, .despedida, .bienvenida {
-      background-color: var(--azul-fondo);
-      padding: 20px;
-      border-radius: 10px;
-    }
-
-    .caratula input {
-      width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      border-radius: 5px;
-      border: none;
-      font-size: 16px;
-    }
-
-    .caratula button {
-      margin-top: 15px;
-      width: 100%;
-      padding: 10px;
-      background-color: var(--azul-boton);
-      color: var(--blanco);
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 20px;
-      margin-bottom: 20px;
-    }
-
-    label {
-      display: block;
-      margin-top: 15px;
-      font-weight: bold;
-      font-size: 14px;
-    }
-
-    input, select, textarea {
-      width: 100%;
-      padding: 8px;
-      margin-top: 5px;
-      border-radius: 5px;
-      border: none;
-      font-size: 14px;
-    }
-
-    input[readonly] {
-      background-color: #ccc;
-      color: #333;
-    }
-
-    .buttons {
+    .seccion {
       display: flex;
       flex-direction: column;
-      gap: 10px;
-      margin-top: 30px;
-    }
-
-    .buttons button {
-      padding: 10px;
-      background-color: var(--azul-boton);
-      color: var(--blanco);
-      border: none;
-      border-radius: 5px;
-      font-weight: bold;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    footer {
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      padding: 20px;
       text-align: center;
-      font-size: 11px;
-      color: rgba(255, 255, 255, 0.6);
-      margin-top: 40px;
     }
 
     .hidden {
       display: none;
     }
 
-    .bienvenida h1 {
-      text-align: center;
-      font-size: 22px;
-      margin-bottom: 10px;
+    input, select, textarea, button {
+      margin: 10px 0;
+      padding: 10px;
+      width: 90%;
+      max-width: 400px;
+      font-size: 16px;
     }
 
-    .bienvenida p {
-      text-align: center;
-      font-size: 16px;
-      font-style: italic;
+    button {
+      background-color: #0078D7;
+      color: white;
+      border: none;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #005fa3;
+    }
+
+    h1, h2 {
+      color: #333;
+    }
+
+    .logo {
+      width: 120px;
+      margin-bottom: 20px;
     }
   </style>
 </head>
 <body>
-  <div class="container">
 
-    <!-- Logo institucional -->
-    <div class="logo">
-      <img src="sitio-herradura-logo.png" alt="Logo Sitio Herradura">
-    </div>
-
-    <!-- Carátula -->
-    <div id="caratula" class="caratula">
-      <h1>Inicio de jornada</h1>
-      <input type="text" id="nombreUsuario" placeholder="Ingresa tu nombre">
-      <button onclick="iniciarJornada()">Continuar</button>
-    </div>
-
-    <!-- Bienvenida personalizada -->
-    <div id="bienvenida" class="bienvenida hidden">
-      <h1>¡Bienvenido!</h1>
-      <p id="mensajeBienvenida"></p>
-    </div>
-
-    <!-- Formulario principal -->
-    <div id="formulario" class="formulario hidden">
-      <h1>Captura de Servicios</h1>
-
-      <label>Folio</label>
-      <input type="text" id="folio" disabled>
-
-      <label>Fecha</label>
-      <input type="date" id="fecha" readonly>
-
-      <label>Hora</label>
-      <input type="time" id="hora" readonly>
-
-      <label>Telefonista</label>
-      <input type="text" id="telefonista" readonly required>
-
-      <label>Dirección *</label>
-      <input type="text" id="direccion" required>
-
-      <label>Destino *</label>
-      <input type="text" id="destino" required>
-
-      <label>Asignado a *</label>
-      <input type="text" id="asignado" required>
-
-      <label>Tipo de servicio *</label>
-      <select id="tipoServicio" required>
-        <option value="">Selecciona una opción</option>
-        <option>NORMAL</option>
-        <option>CARRO AMPLIO</option>
-        <option>CARRO SIN ROTULAR</option>
-        <option>CARRO ROTULAR</option>
-        <option>CAMBIO DE LLANTA</option>
-        <option>PASAR CORRIENTE</option>
-        <option>GUÍA</option>
-        <option>MENSAJERÍA</option>
-        <option>MENSAJERÍA COMPRAS</option>
-        <option>TRANSPORTE DE MASCOTA</option>
-      </select>
-
-      <label>Observaciones</label>
-      <textarea id="observaciones" rows="3"></textarea>
-
-      <div class="buttons">
-        <button onclick="guardarDatos()">GUARDAR</button>
-        <button onclick="copiarComoImagen()">COPIAR COMO IMAGEN</button>
-        <button onclick="cerrarTurno()">CERRAR TURNO</button>
-      </div>
-    </div>
-
-    <!-- Despedida -->
-    <div id="despedida" class="despedida hidden">
-      <h1>Turno finalizado</h1>
-      <p>Gracias por tu servicio.</p>
-    </div>
-
-    <!-- Marca de agua -->
-    <footer>
-      Propiedad y diseño de JESÚS SÁNCHEZ C. con la asesoría de Microsoft Copilot
-    </footer>
+  <!-- Carátula -->
+  <div id="caratula" class="seccion">
+    <img src="LOGO-INSTITUCIONAL.png" alt="Logo" class="logo">
+    <h1>Inicio de Jornada</h1>
+    <input type="text" id="nombreUsuario" placeholder="Ingresa tu nombre">
+    <button onclick="iniciarJornada()">Continuar</button>
   </div>
 
+  <!-- Bienvenida -->
+  <div id="bienvenida" class="seccion hidden">
+    <h2 id="mensajeBienvenida"></h2>
+  </div>
+
+  <!-- Formulario -->
+  <div id="formulario" class="seccion hidden">
+    <h2>Registro de Servicio</h2>
+    <input type="text" id="folio" readonly>
+    <input type="date" id="fecha">
+    <input type="time" id="hora">
+    <input type="text" id="telefonista" readonly>
+    <input type="text" id="direccion" placeholder="Dirección del servicio">
+    <input type="text" id="destino" placeholder="Destino">
+    <input type="text" id="asignado" placeholder="Asignado a">
+    <select id="tipoServicio">
+      <option value="">Selecciona tipo de servicio</option>
+      <option value="Emergencia">Emergencia</option>
+      <option value="Traslado Programado">Traslado Programado</option>
+      <option value="Urgencia Médica">Urgencia Médica</option>
+      <option value="Apoyo Logístico">Apoyo Logístico</option>
+    </select>
+    <textarea id="observaciones" placeholder="Observaciones"></textarea>
+    <button onclick="guardarDatos()">Guardar</button>
+    <button onclick="copiarComoImagen()">Copiar como imagen</button>
+    <button onclick="cerrarTurno()">Cerrar turno</button>
+  </div>
+
+  <!-- Despedida -->
+  <div id="despedida" class="seccion hidden">
+    <h2>¡Gracias por tu servicio hoy!</h2>
+    <p>Tu jornada ha sido registrada correctamente.</p>
+  </div>
+
+  <!-- Script -->
   <script>
     let folioContador = 1;
     let nombreUsuario = "";
@@ -245,7 +130,7 @@
         document.getElementById('fecha').valueAsDate = new Date();
         document.getElementById('hora').value = new Date().toTimeString().slice(0,5);
         document.getElementById('telefonista').value = nombreUsuario;
-      }, 4000); // duración del mensaje motivador
+      }, 4000);
     }
 
     function guardarDatos() {
@@ -272,4 +157,23 @@
         destino: document.getElementById('destino').value,
         asignado: document.getElementById('asignado').value,
         tipoServicio: document.getElementById('tipoServicio').value,
-        observ
+        observaciones: document.getElementById('observaciones').value
+      };
+
+      console.log("Datos enviados a la base de datos:", datos);
+      alert("Datos guardados correctamente.");
+      folioContador++;
+    }
+
+    function copiarComoImagen() {
+      alert("Función de copiar como imagen aún no implementada.");
+    }
+
+    function cerrarTurno() {
+      document.getElementById('formulario').classList.add('hidden');
+      document.getElementById('despedida').classList.remove('hidden');
+    }
+  </script>
+
+</body>
+</html>
