--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     body::before {
       content: "";
-      background-image: url('URL_DE_LA_MARCA_DE_AGUA'); /* ← Reemplaza con tu imagen */
+      background-image: url('https://drive.google.com/uc?export=view&id=ID_DE_TU_IMAGEN'); /* ← Reemplaza con tu imagen institucional */
       background-repeat: no-repeat;
       background-position: center;
       background-size: contain;
@@ -123,7 +123,8 @@
   </div>
 
   <script>
-    const endpoint = "https://script.google.com/macros/s/AKfycbw5EJwqYdBnp1GL_6bTUIY_635i43PF43zf4c8ohZl8UBEH8ZYhGdfWo2mX2hN4BYvzdw/exec";
+    const endpoint = "URL_DEL_SCRIPT_WEB_APP"; // ← Reemplaza con tu nuevo script
+
     let nombreUsuario = "";
     let fechaEntrada = "";
     let horaEntrada = "";
