--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </div>
 
   <script>
-    const endpoint = "URL_DEL_SCRIPT_WEB_APP"; // ← Reemplaza con tu nuevo script
+    const endpoint = "https://script.google.com/macros/s/AKfycbz784HsQoBkzdNhvd15Hrx-sLgoilzwvB0qGTO-s7NsaefH_iV-DYamhB0bHNPGTcDGAQ/exec";
 
     let nombreUsuario = "";
     let fechaEntrada = "";
