--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
     }
 
     body::before {
-      content: "";
-      background-image: url('https://drive.google.com/uc?export=view&id=ID_DE_TU_IMAGEN'); /* ← Reemplaza con tu imagen institucional */
-      background-repeat: no-repeat;
-      background-position: center;
-      background-size: contain;
-      opacity: 0.08;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      z-index: -1;
-    }
+  content: "Propiedad y diseño de Jesús Sánchez C. con la colaboración de Microsoft Copilot";
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-30deg);
+  font-size: 2.5vw;
+  color: white;
+  opacity: 0.08;
+  white-space: nowrap;
+  z-index: -1;
+  pointer-events: none;
+}
 
     .seccion {
       display: none;
